add thi first time

--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
 </head>
 
 <body>
-	<div id="mainDiv">
-		<div id="content">
-			<div id="code">
-			<br/><br/>
-<span id="songplay">挪威的森林，伍佰</span>
+<br/><br/>
+<span id="songplay">第一次，光良</span>
 <script type="text/javascript">
 <!--
 function play(name,artist,auto){
@@ -56,6 +53,11 @@ function SubmitKeyClick(obj, evt) {
 	}
 }
 -->
+</script>
+	<div id="mainDiv">
+		<div id="content">
+			<div id="code">
+
 </script>
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both in this university until some day, I meet you .</span><br />
@@ -102,7 +104,7 @@ function SubmitKeyClick(obj, evt) {
 			</div>
 		</div>
 		<div id="copyright">
-			Inspired by <a href="hackerzhou">FlowerPower</a> project.<br />
+			Inspired by <a href="hackerzhou">hackerzou </a> project.<br />
 			
 		</div>
 	</div>
