--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<script type="text/javascript" src="js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js"></script>
-</head>
+								<br/><br/>
 
-<body>
-<br/><br/>
 <span id="songplay">第一次，光良</span>
 <script type="text/javascript">
 <!--
+
 function play(name,artist,auto){
-	var qwert = '<div style="width:400px; height:77px; background:url([url]http://zzhie.sinaapp.com/code/img.gif[/url]) no-repeat;"><embed style="width:300px; height:48px; margin:0px; padding:0px; float:left;" src="http://box.baidu.com/widget/flash/mbsong.swf?name='+name+'&artist='+artist+'&autoPlay='+auto+'" width="310" height="51" allowscriptaccess="never" allownetworking="internal" type="application/x-shockwave-flash" /></div>';
+	var qwert = '<div style="width:400px; height:77px; background:url([url]http://zzhie.sinaapp.com/code/img.gif[/url]) no-repeat;"><embed style="width:10px; height:10px; margin:0px; padding:0px; float:left;" src="http://box.baidu.com/widget/flash/mbsong.swf?name='+name+'&artist='+artist+'&autoPlay='+auto+'" width="310" height="51" allowscriptaccess="never" allownetworking="internal" type="application/x-shockwave-flash" /></div>';
 document.getElementById('songplay').innerHTML = qwert;
 }
 song = document.getElementById('songplay').innerHTML;
@@ -54,27 +53,29 @@ function SubmitKeyClick(obj, evt) {
 }
 -->
 </script>
+</head>
+
+<body>
+
 	<div id="mainDiv">
 		<div id="content">
 			<div id="code">
-
-</script>
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both in this university until some day, I meet you .</span><br />
-				<span class="space"/><span class="comments">* we were seldom have a touch , however it won't hinder me to walk to you .</span><br />
+				<span class="space"/><span class="comments">* we were seldom having a touch , however it won't hinder me to walk to you .</span><br />
 				<span class="space"/><span class="comments">* I have ever thought to write a vc application to confess my thoughts to you .</span><br />
-				<span class="space"/><span class="comments">* I am afraid the time won't permit it cause my coding level :).</span><br />
+				<span class="space"/><span class="comments">* I am afraid the time won't permit it because of my coding level :).</span><br />
 				<span class="space"/><span class="comments">* and now I am here .</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
 				Boy i = <span class="keyword">new</span> Boy(<span class="string">"chenlumin"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"lihuan"</span>);<br />
 				<span class="comments">// lihuan I want say something to you  </span><br />
 				i.love(u);<br />
-				<span class="comments">// I don't know if you are still single, and i am afraid but i hope you accept.</span><br />
+				<span class="comments">// I don't know if you are still single, and I am afraid but I hope you are and accept me .</span><br />
 				u.accepted();<br />
 				<span class="comments">// actually I miss you everyday .</span><br />
 				i.miss(u);<br />
-				<span class="comments">// And I want to take care of you and our love.</span><br />
+				<span class="comments">// And I want to take care of you and our love if I could get this chance.</span><br />
 				i.takeCareOf(u);<br />
 				<span class="comments">// it's not easy to make the decision .</span><br />
 				<span class="comments">// So I keep waiting and I have confidence that you will.</span><br />
@@ -104,7 +105,7 @@ function SubmitKeyClick(obj, evt) {
 			</div>
 		</div>
 		<div id="copyright">
-			Inspired by <a href="hackerzhou">hackerzou </a> project.<br />
+			Inspired by <a href="hackerzhou">hackerzou</a> project.<br />
 			
 		</div>
 	</div>
