--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-	<title>Our Love Story</title>
+	<title>lihuan's Love Story</title>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 	<style type="text/css">
 		@font-face {
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/functions.js"></script>
 								<br/><br/>
 
-<span id="songplay">第一次，光良</span>
+<span id="songplay">Love Story，Taylor swift</span>
 <script type="text/javascript">
 <!--
 
