--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ function SubmitKeyClick(obj, evt) {
 			<div id="code">
 				<span class="comments">/**</span><br />
 				<span class="space"/><span class="comments">* We are both in this university until some day, I meet you .</span><br />
-				<span class="space"/><span class="comments">* we were seldom having a touch , however it won't hinder me to walk to you .</span><br />
+				<span class="space"/><span class="comments">* we were seldom having touch , however it won't hinder me to walk to you .</span><br />
 				<span class="space"/><span class="comments">* I have ever thought to write a vc application to confess my thoughts to you .</span><br />
 				<span class="space"/><span class="comments">* I am afraid the time won't permit it because of my coding level :).</span><br />
 				<span class="space"/><span class="comments">* and now I am here .</span><br />
