--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="js/functions.js"></script>
 								<br/><br/>
 
-<span id="songplay">Love Story，Taylor swift</span>
+<span id="songplay">简单爱，周杰伦</span>
 <script type="text/javascript">
 <!--
 
@@ -67,7 +67,7 @@ function SubmitKeyClick(obj, evt) {
 				<span class="space"/><span class="comments">* I am afraid the time won't permit it because of my coding level :).</span><br />
 				<span class="space"/><span class="comments">* and now I am here .</span><br />
 				<span class="space"/><span class="comments">*/</span><br />
-				Boy i = <span class="keyword">new</span> Boy(<span class="string">"chenlumin"</span>);<br />
+				Boy i = <span class="keyword">new</span> Boy(<span class="string">"anonymous"</span>);<br />
 				Girl u = <span class="keyword">new</span> Girl(<span class="string">"lihuan"</span>);<br />
 				<span class="comments">// lihuan I want say something to you  </span><br />
 				i.love(u);<br />
@@ -99,7 +99,7 @@ function SubmitKeyClick(obj, evt) {
 					</div>
 					<div id="loveu">
 						Love u forever and ever.<br/>
-						<div class="signature">- chenlumin </div>
+						<div class="signature">- It's a secret </div>
 					</div>
 				</div>
 			</div>
